--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ tokio = { version = "1", features = ["full"] }
 chrono = "0.4.26"
 md5 = "0.7.0"
 dotenv = "0.15.0"
+uuid = "0.8.2"
 
 [build-dependencies]
 winres = "0.1.12"
